cabal-version:      2.4
name:               ucap
version:            0.1.0.0
synopsis:           Update capabilities
license:            MIT
license-file:       LICENSE
author:             octalsrc
maintainer:         nicklewchenko92@gmail.com

library
    exposed-modules:  Data.UCap
                    , Data.UCap.Bound
                    , Data.UCap.InfMap
                    , Data.UCap.InfSet
                    , Data.UCap.Op
    other-modules:    Data.UCap.Classes
                    , Data.UCap.Const
                    , Data.UCap.Counter
                    , Data.UCap.Editor
                    , Data.UCap.Either
                    , Data.UCap.Identity
                    , Data.UCap.Lens
                    , Data.UCap.Map
                    , Data.UCap.Op.Internal
                    , Data.UCap.Op.Counter
                    , Data.UCap.Op.Either
                    , Data.UCap.Op.Map
    build-depends:    base ^>=4.14.3.0
                    , containers
                    , aeson
                    , microlens-ghc
                    , mtl
    hs-source-dirs:   src
    default-language: Haskell2010

test-suite test
    default-language: Haskell2010
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          test.hs
    other-modules:    Data.UCapTests
                    , Data.UCap.InfMapTests
                    , Data.UCap.MapTests
    build-depends:    base ^>=4.14.3.0
                    , containers
                    , mtl
                    , tasty
                    , tasty-hunit
                    , tasty-quickcheck
                    , ucap
