cabal-version:      2.4
name:               ucap
version:            0.1.0.0
synopsis:           Update capabilities
license:            MIT
license-file:       LICENSE
author:             octalsrc
maintainer:         nicklewchenko92@gmail.com

library
    exposed-modules:  Data.InfNum
                    , Data.InfMap
                    , Data.InfSet
                    , Data.SRQueue
                    , Lang.Rwa
                    , Lang.Rwa.Interpret
                    , UCap
                    , UCap.Coord
                    , UCap.Domain
                    , UCap.Domain.Int
                    , UCap.Lens
                    , UCap.Lifter
                    , UCap.Op
                    , UCap.Replica
                    , UCap.Replica.Capconf
                    , UCap.Replica.Coord
                    , UCap.Replica.Demo
                    , UCap.Replica.PDemo
                    , UCap.Replica.Script
                    , UCap.Replica.Transact
                    , UCap.Replica.Types
                    , UCap.Replica.VClock
                    , UCap.Replica.VThread
    other-modules:    Lang.Rwa.Internal
                    , UCap.Coord.Classes
                    , UCap.Coord.Const
                    , UCap.Coord.Map
                    , UCap.Coord.Num
                    , UCap.Coord.Static
                    , UCap.Domain.Classes
                    , UCap.Domain.Const
                    , UCap.Domain.Either
                    , UCap.Domain.Identity
                    , UCap.Domain.Map
                    , UCap.Domain.Num
                    , UCap.Op.Internal
                    , UCap.Op.Num
                    , UCap.Op.Either
                    , UCap.Op.Map
    build-depends:    base ^>=4.14.3.0
                    , containers
                    , aeson
                    , microlens-platform
                    , mtl
                    , free
                    , bifunctors
    hs-source-dirs:   src
    default-language: Haskell2010

test-suite test
    default-language: Haskell2010
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          test.hs
    other-modules:    Data.InfMapTests
                    , UCapTests
                    , UCap.MapTests
                    , UCap.OpTests
                    , UCap.Replica.CoordTests
                    , UCap.Replica.DemoTests
                    , UCap.Replica.PDemoTests
                    , UCap.Replica.VClockTests
                    , UCap.Replica.VThreadTests
    build-depends:    base ^>=4.14.3.0
                    , containers
                    , mtl
                    , tasty
                    , tasty-hunit
                    , tasty-quickcheck
                    , ucap
